compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__guards__clause_guards-2.snap
---
source: compiler-core/src/erlang/tests/guards.rs
assertion_line: 17
expression: "\npub fn main(args) {\n  case args {\n    x if {x != x} == {args == args} -> 1\n    _ -> 0\n  }\n}\n"
---
-module(the_app).
-compile(no_auto_import).

-export([main/1]).

-spec main(any()) -> integer().
main(Args) ->
    case Args of
        X when (X =/= X) =:= (Args =:= Args) ->
            1;

        _@1 ->
            0
    end.

