compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__guards__clause_guards-20.snap
---
source: compiler-core/src/erlang/tests/guards.rs
expression: "\n    type Test { Test(x: Int, y: Float) }\n    pub fn main() {\n      let x = Test(1, 3.0)\n      case x {\n        _ if x == Test(1, 1.0) -> 1\n        _ if x == Test(y: 2.0, x: 2) -> 2\n        _ if x != Test(2, 3.0) -> 2\n        _ -> 0\n      }\n    }\n"

---
-module(the_app).
-compile(no_auto_import).

-export([main/0]).
-export_type([test/0]).

-type test() :: {test, integer(), float()}.

-spec main() -> integer().
main() ->
    X = {test, 1, 3.0},
    case X of
        _@1 when X =:= {test, 1, 1.0} ->
            1;

        _@2 when X =:= {test, 2, 2.0} ->
            2;

        _@3 when X =/= {test, 2, 3.0} ->
            2;

        _@4 ->
            0
    end.

